// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resources.localaccount.v1;

import "google/api/field_behavior.proto";
import "resources/common/v1/common.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/open-edge-platform/infra-core/apiv2/v2/internal/pbapi/resources/localaccount/v1;localaccountv1";

message LocalAccountResource {
  // resource identifier
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^localaccount-[0-9a-f]{8}$"
      max_len: 21
    }
  ];
  // Username provided by admin
  string username = 2 [
    (buf.validate.field).string = {
      pattern: "^[a-z][a-z0-9-]{0,31}$"
      max_len: 32
    },
    (google.api.field_behavior) = REQUIRED
  ];

  // SSH Public Key of EN
  string ssh_key = 3 [
    (buf.validate.field).string = {
      pattern: "^(ssh-ed25519|ecdsa-sha2-nistp521) ([A-Za-z0-9+/=]+) ?(.*)?$"
      max_len: 800
    },
    (google.api.field_behavior) = REQUIRED
  ];
  
  // Deprecated, The local account resource's unique identifier. Alias of resourceId.
  string local_accountID = 5001 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^localaccount-[0-9a-f]{8}$"
      max_len: 21
    }
  ];
  
  // Timestamps associated to the resource.
  resources.common.v1.Timestamps timestamps = 50100 [(google.api.field_behavior) = OUTPUT_ONLY];
}
